# PokerCoreApi

./: .env_example  .gitignore  Dockerfile  README.md  build_c.sh  configure.sh  configure_ux.sh  docker-compose.yml  docker_build.sh  docker_reset.sh  docker_run.sh  pyproject.toml  up.bat
app/: logger.py
app/apis/: __init__.py  decision_maker.py  healthcheck.py
app/apis/examples/: decision_maker_defaults.py
app/config/: __init__.py  config.py
app/core/: model.py
app/core/montecarlo/: CMakeLists.txt  __init__.py  montecarlo.c  montecarlo.py
app/core/montecarlo/include/shared/: arrays.h  evaluator.h
app/core/montecarlo/src/: evaluator.c
app/data/: group_hands.json  hands.json  hands_range.json
app/schemas/: __init__.py
shell/: build.sh
