[tool.poetry]
name = "pokercoreapi"
version = "0.1.0"
description = ""
authors = ["Allex Frolov <mosbka.37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flask-restx = "^1.3.0"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
